blog/blog-backstage-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-backstage
  name: blog-backstage
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: blog-backstage
