blog/blog-image-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-image
  name: blog-image
spec:
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    app: blog-image
