blog/blog-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: blog-web
  name: blog-web
spec:
  ports:
    - name: "8081"
      port: 8081
      targetPort: 8081
  selector:
    app: blog-web
